<resources>
    <string name="app_name">My Poems</string>
    <string name="enterPass">Введите пароль</string>
    <string name="lock">замОк</string>
    <string name="newPasswordTitle">Придумайте пароль</string>
    <string name="errorIncorrectNewPassword">Пароль может состоять только из цифр!</string>
    <string name="settings">Настройки</string>
    <string name="create_poem">Создать новый стих</string>
    <string name="poemName">Название</string>
    <string name="epigraf">Эпиграф?</string>
    <string name="text">Текст</string>
    <string name="autor">Автор:</string>
    <string name="other">Для заметок:</string>
    <string name="edit_poem">Редактировать текст</string>
    <string name="copy_poem">Скопировать текст</string>
    <string name="delete_poem">Удалить стихотворение</string>
    <string name="save">Сохранить</string>
    <string name="saving_error">Ошибка сохранения</string>
    <string name="saved">Сохранено</string>
    <string name="confirm">Вы уверены?</string>
    <string name="delete_poem_message">Это действие нельзя отменить</string>
    <string name="delete">Удалить</string>
    <string name="deleted">Удалено</string>
    <string name="error">Ошибка</string>
    <string name="copied">Текст скопирован</string>
    <string name="date">Дата:</string>
    <string name="cancel">Отмена</string>
    <string name="no_changes">Изменений нет</string>
    <string name="useDynamicColors">Динамические цвета</string>
    <string name="appTheme">Тема приложения</string>
    <string name="app_interface">Интерфейс</string>
    <string name="app_login">Вход в приложение</string>
    <string name="password">Пароль</string>
    <string name="passwordLength">Длина пароля</string>
    <string name="searchType">Тип поиска</string>
    <string name="sorting">Сортировка</string>
    <string name="def_author">Автор по-умолчанию</string>
    <string name="searchByFirstLine">По первой строке</string>
    <string name="searchByTitle">По названию</string>
    <string name="sortNewFirst">Сначала новые</string>
    <string name="sortOldFirst">Новые внизу</string>
    <string name="poems_pref">Стихотворения</string>
    <string name="text_is_empty">Текст не может быть пустым</string>
    <string name="menu">Меню</string>
</resources>