<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/title"
                style="@style/EDasTextView"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:hint="@string/poemName"
                android:importantForAutofill="no"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/epigraph"
                style="@style/EDasTextView"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="end"
                android:hint="@string/epigraf"
                android:importantForAutofill="no"
                android:inputType="textMultiLine|textCapSentences"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/text"
                style="@style/EDasTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/text"
                android:importantForAutofill="no"
                android:inputType="textMultiLine|textCapSentences" />


            <EditText
                android:id="@+id/autor"
                style="@style/EDasTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:gravity="end"
                android:hint="@string/autor"
                android:importantForAutofill="no"
                android:inputType="textCapWords"
                android:maxLines="1" />

            <TextView
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/additionalTextDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:src="?colorOnBackground" />

            <EditText
                android:id="@+id/dop"
                style="@style/EDasTextView"
                android:layout_marginTop="4dp"
                android:layout_marginHorizontal="10dp"
                android:hint="@string/other"
                android:importantForAutofill="no"
                android:inputType="textMultiLine|textCapSentences" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/poemButtonsDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:src="?colorOnBackground" />

    <FrameLayout
        android:id="@+id/poemButtonsParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnDelete"
            style="?attr/actionButtonStyle"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/delete_poem"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_delete" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnCopy"
            style="?actionButtonStyle"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="60dp"
            android:contentDescription="@string/copy_poem"
            app:srcCompat="@drawable/ic_copy" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnSave"
            style="?actionButtonStyle"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="60dp"
            android:contentDescription="@string/save"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_save" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnChangeViewMode"
            style="?actionButtonStyle"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/edit_poem"
            app:srcCompat="@drawable/ic_edit" />

    </FrameLayout>

</androidx.appcompat.widget.LinearLayoutCompat>