<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lockView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".login.LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?colorPrimarySurface"
        android:gravity="center"
        android:text="@string/enterPass"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#fff"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@id/passwordField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:gravity="center"
        android:hint="@string/app_name"
        android:textColorHint="#fff"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_lock_login"
        app:endIconContentDescription="@string/lock"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:focusable="false"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="9"
            android:textColor="#fff"
            android:textColorHint="#fff" />

    </com.google.android.material.textfield.TextInputLayout>

    <GridLayout
        android:id="@+id/grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        app:layout_constraintTop_toBottomOf="@id/passwordField"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn1"
            style="@style/LoginTextButton"
            android:text="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn2"
            style="@style/LoginTextButton"
            android:text="2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn3"
            style="@style/LoginTextButton"
            android:text="3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn4"
            style="@style/LoginTextButton"
            android:text="4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn5"
            style="@style/LoginTextButton"
            android:text="5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn6"
            style="@style/LoginTextButton"
            android:text="6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn7"
            style="@style/LoginTextButton"
            android:text="7" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn8"
            style="@style/LoginTextButton"
            android:text="8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn9"
            style="@style/LoginTextButton"
            android:text="9" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDeleteSymbol"
            style="@style/LoginTextButton"
            app:iconGravity="textStart"
            app:icon="@drawable/ic_backspace"
            app:iconTint="@color/loginButtonTextColor"/>
        <!--android:textSize="16sp" />-->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn0"
            style="@style/LoginTextButton"
            android:text="0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCheckPassword"
            style="@style/LoginTextButton"
            app:iconGravity="textEnd"
            app:icon="@drawable/ic_enter" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

